--- a/Web CV.html
+++ b/Web CV.html
@@ -42,12 +42,14 @@
 
                         <div class="mt-3 d-none d-sm-block">
                             <div id="invisible">
-                                Je suis à la recherche d'une période en entreprise pour parfaire ma
-                                formation Concepteur développeur d'apllications.
-                                Désireux de relever de nouveaux challenges, motiver pour apprendre.
-                                Egalement rigoureux, respectueux, ponctuel, autonome et curieux, je
-                                souhaiterais rejoindre vos effectifs afin de participer au
-                                développement de vos projets.
+                                <p>
+                                    Je suis à la recherche d'une période en entreprise pour parfaire ma
+                                    formation Concepteur développeur d'applications.
+                                    Désireux de relever de nouveaux challenges, motiver pour apprendre.
+                                    Egalement rigoureux, respectueux, ponctuel, autonome et curieux, je
+                                    souhaiterais rejoindre vos effectifs afin de participer au
+                                    développement de vos projets.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -57,8 +59,8 @@
                     <div class="bg-light separationWhite ms-auto" id="radius"></div>
                 </div>
 
-                <div class="col-3  borderRight" id="couleurBlanc">
-                    <h4>LANGUES</h4>
+                <div class="container-fluid col-3  borderRight" id="couleurBlanc">
+                    <h6>LANGUES</h6>
 
                     Anglais technique
 
@@ -68,109 +70,140 @@
                     <p class="nonepoint">Autonome</p>
                     <p class="nonepoint">Curieux</p>
 
-                    <div id="invisible">
-                        <h4>CENTRE D'INTERET</h4>
-                        <dl>
-                            <h6>Voyages :</h6>
-                            <li>Europe (France, Belgique, Angleterre, Suisse, Luxenmbourg, Espagne, Italie)</li>
-                            <li>Maghreb (Alegerie, Maroc, Tunisie)</li>
-                        </dl>
+                    <div class="mt-3 d-none d-sm-block">
+                        <div id="invisible">
+                            <h6>CENTRE D'INTERET</h6>
+                            <dl>
+                                <p>Voyages :</p>
+                                <li>Europe (France, Belgique, Angleterre, Suisse, Luxembourg, Espagne, Italie)</li>
+                                <li>Maghreb (Algerie, Maroc, Tunisie)</li>
+                            </dl>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="container-fluid mt-0 p-0" id="whrite">
+            <div class="container-fluid mt-0 p-0" id="whrite">
 
-            <div class="row mt-0 ">
+                <div class="row mt-0 ">
 
-                <div class="col-8">
+                    <div class="col-8">
 
-                    <div class="row text-center">
-                        <H5 class="title-space">EXPERIENCE PROFESSIONNELLE</H5>
+                        <div class="row text-center">
+                            <H5 class="title-space">EXPERIENCES PROFESSIONNELLES</H5>
+                        </div>
+
+                        <div class="ERT">
+                            <div class="" id="titleEffect">
+                                <h6 class="title">2011 - 2020</h6>
+                            </div>
+                            <h6> Chef d'équipe - Ert-technologies</h6>
+                            <p>Répartition des interventions, métrologies, gestion des stocks, sensibilisations
+                                sécurité,
+                                conf
+                                call client, mailing client, formation aux nouvelles solutions proposées par SFR</p>
+                        </div>
+
+                        <div class="ERT">
+                            <div class="" id="titleEffect">
+                                <h6 class="title">2010</h6>
+                            </div>
+                            <h6> Technicien Stagiaire - EPSM Lille Métropole</h6>
+                            <p>Support micro informatique réseau et téléphonie IP, déploiement de logiciels</p>
+                        </div>
+
+                        <div class="ERT">
+                            <div class="" id="titleEffect">
+                                <h6 class="title">2007 - 2008</h6>
+                            </div>
+                            <h6> Agent de sécurité Apen</h6>
+                            <p>Premier secours client, surveillance et interpellation. Surveillance secteur
+                                intervention, garde rapprochée</p>
+
+                        </div>
+
+                        <div class="ERT">
+                            <div class="" id="titleEffect">
+                                <h6 class="title">2003 - 2006</h6>
+                            </div>
+                            <h6> Conducteur de ligne - Damart</h6>
+                            <p>
+                                Conducteur routeur sur machine à commande numérique, responsable de deux équipiers, de
+                                la
+                                qualité et de l'objectif de production</p>
+                        </div>
+                        <div class="row text-center">
+                            <H5 class="title-space">FORMATIONS</H5>
+                        </div>
+
+                        <div class="ERT">
+                            <div class="" id="titleEffect">
+                                <h6 class="title">2022</h6>
+                            </div>
+                            <h6> Concepteur développeur d'applications</h6>
+                            <p>MLD / MCD / User Case ,SQL server,C# et .net, React, Node, Javascript</p>
+                        </div>
+
+
+
+
+                        <div class="ERT">
+                            <div class="" id="titleEffect">
+                                <h6 class="title">2021</h6>
+                            </div>
+                            <h6> Formation Module de Spécialisation Développeur PHP - AFPA Roubaix</h6>
+                            <p>Approfondissement php, symfony,Js React.Js, Node.Js</p>
+                        </div>
+                        <div class="ERT">
+                            <div class="" id="titleEffect">
+                                <h6 class="title">2010</h6>
+                            </div>
+                            <h6>TRTE</h6>
+                            <p>Technicien Réseau Télécommunication d'entreprise - AFPA Dunkerque</p>
+
+                        </div>
+                        <div class="ERT">
+                            <div class="" id="titleEffect">
+                                <h6 class="title">2007</h6>
+                            </div>
+                            <h6> SSIAP</h6>
+                            <p>Service de Sécurité Incendie et d’Assistance à Personnes.</p>
+
+                        </div>
                     </div>
 
-                    <div class="ERT">
-                        <div class="" id="titleEffect">
-                            <h6 class="title">2011 - 2020</h6>
-                        </div>
-                        <h6> Chef d'équipe - Ert-technologies</h6>
-                        <p>Répartition des interventions, métrologies, gestions des stocks, sensibilisations sécurité,
-                            conf
-                            call client, mailing client, formation aux nouvelles solution proposer par SFR</p>
+                    <div class="col-1 mb-5">
+                        <div class="separationWhite ms-auto" style="background-color: RGB(0,168,168) "></div>
                     </div>
 
-                    <div class="ERT">
-                        <div class="" id="titleEffect">
-                            <h6 class="title">2010</h6>
-                        </div>
-                        <h6> Technicien Stagiaire - EPSM Lille Métropole</h6>
-                        <p>Support micro informatique réseau et téléphonie IP, déploiement de logiciels</p>
-                    </div>
 
-                    <div class="ERT">
-                        <div class="" id="titleEffect">
-                            <h6 class="title">2007 - 2008</h6>
-                        </div>
-                        <h6> Agent de sécurité Apen</h6>
-                        <p>Premier decours client, surveillance et interpellation</p>
-                        <p>Surveillance secteur inervention, garde rapprochée</p>
-                    </div>
 
-                    <div class="ERT">
-                        <div class="" id="titleEffect">
-                            <h6 class="title">2003 - 2006</h6>
-                        </div>
-                        <h6> Conducteur de ligne - Damart</h6>
-                        <p>
-                            Conducteur routeur sur marchine à commande numérique, responsable de deux équipiers, de la
-                            qualité et de l'objectif de production</p>
-                    </div>
-                    <H5 class="title space">FORMATION</H5>
+                    <div class="col-3 mt-3 borderRight ">
+
+                        <i class="icon-csharp data-bs-toggle=" tooltip data-bs-placement="top" title="csharp"></i>
+                        <i class="icon-react data-bs-toggle=" tooltip data-bs-placement="top" title="react"></i>
+                        <i class="icon-html5 data-bs-toggle=" tooltip data-bs-placement="top" title="html5"></i>
+                        <i class="icon-css3 data-bs-toggle=" tooltip data-bs-placement="top" title="css3"></i>
+                        <i class="icon-javascript data-bs-toggle=" tooltip data-bs-placement="top"
+                            title="javascript"></i>
+                        <i class="icon-bootstrap data-bs-toggle=" tooltip data-bs-placement="top"
+                            title="bootstrap 5"></i>
+                        <i class="icon-mysql data-bs-toggle=" tooltip data-bs-placement="top" title="mysql"></i>
+                        <i class="icon-php data-bs-toggle=" tooltip data-bs-placement="top" title="php"></i>
+                        <i class="icon-git data-bs-toggle=" tooltip data-bs-placement="top" title="git"></i>
+                        <i class="icon-vscode data-bs-toggle=" tooltip data-bs-placement="top" title="vscode"></i>
+                        <i class="icon-simphony data-bs-toggle=" tooltip data-bs-placement="top" title="simphony"></i>
+                        <i class="icon-terminal data-bs-toggle=" tooltip data-bs-placement="top" title="terminal"></i>
 
 
 
 
-                    <div class="ERT">
-                        <div class="" id="titleEffect">
-                            <h6 class="title">2020</h6>
-                        </div>
-                        <h6> Formation Module de Spécialisation Développeur PHP - AFPA Roubaix</h6>
-                        <p>Approfondissement php, symfony,Js React.Js, Node.Js</p>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-1 mb-5">
-                    <div class="separationWhite ms-auto" style="background-color: RGB(0,168,168) "></div>
-                </div>
-
-
-
-                <div class="col-3 mt-3 borderRight ">
-
-
-               
-                <i class="icon-csharp data-bs-toggle="tooltip data-bs-placement="top" title="csharp"></i>
-                <i class="icon-react data-bs-toggle="tooltip data-bs-placement="top" title="react"></i>
-                <i class="icon-html5 data-bs-toggle="tooltip data-bs-placement="top" title="html5"></i>
-                <i class="icon-css3 data-bs-toggle="tooltip data-bs-placement="top" title="css3"></i>
-                <i class="icon-javascript data-bs-toggle="tooltip data-bs-placement="top" title="javascript"></i>
-                <i class="icon-bootstrap data-bs-toggle="tooltip data-bs-placement="top" title="bootstrap 5"></i>
-                <i class="icon-mysql data-bs-toggle="tooltip data-bs-placement="top" title="mysql"></i>
-                <i class="icon-php data-bs-toggle="tooltip data-bs-placement="top" title="php"></i>
-                <i class="icon-vscode data-bs-toggle="tooltip data-bs-placement="top" title="vscode"></i>
-                <i class="icon-simphony data-bs-toggle="tooltip data-bs-placement="top" title="simphony"></i>
-                <i class="icon-terminal data-bs-toggle="tooltip data-bs-placement="top" title="terminal"></i>
-
-
-
-            
+            <script src="index.js"></script>
         </div>
-    </div>
-    </div>
-
-    <script src="index.js"></script>
-    </div>
 
 </body>
 
