--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <p>Support micro informatique réseau et téléphonie IP, déploiement de logiciels</p>
                         </div>
 
-                        <div class="ERT">
+                        <div class="ERT" id="invisible">
                             <div class="" id="titleEffect">
                                 <h6 class="title">2007 - 2008</h6>
                             </div>
@@ -122,7 +122,7 @@
 
                         </div>
 
-                        <div class="ERT">
+                        <div class="ERT" id="invisible">
                             <div class="" id="titleEffect">
                                 <h6 class="title">2003 - 2006</h6>
                             </div>
@@ -154,7 +154,7 @@
                             <h6> Formation Module de Spécialisation Développeur PHP - AFPA Roubaix</h6>
                             <p>Approfondissement php, symfony,Js React.Js, Node.Js</p>
                         </div>
-                        <div class="ERT">
+                        <div class="ERT" id="invisible">
                             <div class="" id="titleEffect">
                                 <h6 class="title">2010</h6>
                             </div>
@@ -162,7 +162,7 @@
                             <p>Technicien Réseau Télécommunication d'entreprise - AFPA Dunkerque</p>
 
                         </div>
-                        <div class="ERT">
+                        <div class="ERT" id="invisible">
                             <div class="" id="titleEffect">
                                 <h6 class="title">2007</h6>
                             </div>
