--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <h6> Formation Module de Spécialisation Développeur PHP - AFPA Roubaix</h6>
                             <p>Approfondissement php, symfony,Js React.Js, Node.Js</p>
                         </div>
-                        <div class="ERT" id="invisible">
+                        <div class="ERT">
                             <div class="" id="titleEffect">
                                 <h6 class="title">2010</h6>
                             </div>
